--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,6 +1,4 @@
-.background-color{
-    background-color: var(--color-black);
-}
+
 .text-white{
     color: var(--color-white) !important;
 }
@@ -9,4 +7,7 @@
 }
 .font-color{
     color: var(--color-yellow);
+}
+.background-color2{
+    background-color: var(--color-gray);
 }
