--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-md-12 p-0">
     <nav class="navbar navbar-expand-lg text-white background-color">
-
       <!-- logomarca da CS   -->
       <div class="col-md-3 d-flex justify-content-end">
         <img class="mr-3" src="../../assets/logocs.png" alt="Logo CS Games" />
@@ -22,7 +21,7 @@
       <div class="col-md-5 d-flex justify-content-center">
         <form class="form-inline">
           <input
-            class="form-control border-form mr-sm-2 pr-5 pl-5 d-flex justify-content-center"
+            class="form-control border-form mr-sm-2 d-flex justify-content-center"
             type="search"
             placeholder="Search"
             aria-label="Search"
@@ -85,4 +84,47 @@
       </div>
     </nav>
   </div>
+</div>
+
+<!-- Segundo Menu -->
+<div class="row d-flex justify-content-center text-white background-color2">
+  <nav class="navbar navbar-expand-lg ">
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active mr-5">
+          <a class="nav-link text-white" href="#"
+            >Playstation <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item active mr-5 ">
+          <a class="nav-link text-white" href="#"
+            >Xbox <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item active mr-5">
+          <a class="nav-link text-white" href="#"
+            >Nitendo <span class="sr-only">(current)</span></a
+          >
+        </li>
+  
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Ofertas
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </div>
