--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <app-menu></app-menu>
 
+<h3 class="mt-3 d-flex justify-content-center font-config">Lançamentos</h3>
+
 <!-- Carousel -->
-<div class="row d-flex justify-content-center mt-5">
+<div class="row d-flex justify-content-center mt-3">
   <div
     id="carouselExampleControls"
     class="carousel slide w-50"
@@ -69,31 +71,63 @@
         >
       </nav>
 </div>
+<!-- Fim do navbar compras -->
+
+<h4 class="mt-5 ml-5 d-flex justify-content-start font-config">Ofertas</h4>
 
 <!-- Início dos cards -->
-<div class="card-deck mr-3 ml-3 mt-5">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+<div class="container-fluid">
+    <div class="row-fluid">
+     
+        <div id="listagemProdutos" class="listagem ofertas-listagem">
+            <div class="card-deck mr-4 ml-4 mt-5">
+                <div class="card d-flex align-items-center">
+                  <img src="https://image.api.playstation.com/vulcan/ap/rnd/202010/0221/vC7trMorHJgbImp8PCQvpI0p.png" class="card-img-top mt-2 size-image" alt="Capa do jogo Horizon Zero Dawn">
+                  <div class="card-body">
+                    <h5 class="card-title">Horizon Zero Dawn</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card d-flex align-items-center">
+                  <img src="https://www.windows11tips.com/wp-content/uploads/2021/12/image-330.png" class="card-img-top mt-2 size-image" alt="Capa do jogo Hollow Knight">
+                  <div class="card-body">
+                    <h5 class="card-title">Hollow Knight</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum nihil optio quae.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card d-flex align-items-center">
+                  <img src="https://image.api.playstation.com/vulcan/ap/rnd/202206/0300/E2vZwVaDJbhLZpJo7Q10IyYo.png" class="card-img-top mt-2 size-image" alt="Capa do Jogo Stray">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card d-flex align-items-center">
+                    <img src="https://image.api.playstation.com/vulcan/img/rnd/202010/2618/w48z6bzefZPrRcJHc7L8SO66.png" class="card-img-top mt-2 size-image" alt="Capa do jogo The Last of Us part II">
+                    <div class="card-body">
+                      <h5 class="card-title">The Last of Us part II</h5>
+                      <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                  <div class="card d-flex align-items-center">
+                    <img src="https://images.kabum.com.br/produtos/fotos/192214/ori-and-the-blind-forest-definitive-edition_1627654105418_g.jpg" class="card-img-top mt-2 size-image" alt="Capa do jogo Ori The Blind Forest">
+                    <div class="card-body">
+                      <h5 class="card-title">Ori The Blind Forest</h5>
+                      <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla tenetur totam.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+              </div>
+        </div>
+    
+
+ 
+            
+    
     </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
+    
+</div>
