feat: Creating and styling footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,75 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start text-muted" >
+
+    
+    <div class="d-flex justify-content-center background-color mt-5">
+    <div class="container mt-5 ">
+    
+        <div class="row mt-0 mb-1">
+        
+        <div class="d-flex justify-content-center col-md-3 mt-3">
+            
+                <img src="../../assets/logocs.png" width="150px" height="75px"  alt="logo-csgames">
+            
+        </div>
+        
+        <div class="col-md-2 ">
+
+            <p class="textLinha mb-3">Início</p>
+
+                <ul class="list-unstyled">
+                    <li><a class="link" href="" routerLink="/entrar">Home</a></li>
+                    <li><a class="link" href="" routerLink="/sobre">Sobre</a></li>
+                    <li><a class="link" href="" routerLink="/cadastrar">Cadastre-se</a></li>
+                </ul>  
+        </div>
+
+        <div class="col-md-2 mb-4">
+
+            <p class="textLinha mb-3">Sobre nós</p>
+
+                <ul class="list-unstyled">
+                    <li><a class="link" href="" routerLink="/">Equipe</a></li>
+                    <li><a class="link" href="" routerLink="/">Nosso objetivo</a></li>
+                    <li><a class="link" href="" routerLink="/"></a></li>
+                </ul>
+            
+        </div>
+
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+            <p class="textLinha mb-3">Suporte</p>
+
+            <ul class="list-unstyled" >
+                <li><a class="link" href="">FAQ</a></li>
+                <li><a class="link" href="">Chat</a></li>
+                <li><a class="link" href=""></a></li>
+            </ul>
+        
+        </div>
+        
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-1 mb-4">
+        
+            <p class="textLinha mb-3">Contato</p>
+
+            <ul class="list-unstyled">
+                <li class="clr mb-1"><i class="fa fa-whatsapp" aria-hidden="true"></i> (81) 0000-0000</li>
+                <li class="clr mb-1"><i class="fa fa-map-marker" aria-hidden="true"></i> Recife, PE 10000, BR</li>
+                <li class="clr mb-1"><i class="fa fa-envelope-o" aria-hidden="true"></i> csgames@gmail.com</li>
+            </ul>
+            
+        </div>
+        
+        </div>
+        
+    </div>
+    </div>
+    
+
+    <div class="text-center fw-bolder text-light p-3 background-footer" >
+        Copyright© 2022 CS GAMES
+    </div>
+    
+</footer> 
+
+
