--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,18 +18,30 @@
       </div>
 
       <!-- Barra de pesquisa -->
-      <div class="col-md-5 d-flex justify-content-center">
-        <form class="form-inline">
-          <input
-            class="form-control border-form mr-sm-2 d-flex justify-content-center"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn border-form font-color my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
+      <div class="col-md-5">
+        <div class="row d-flex justify-content-center">
+          <a class="home-about-color d-flex align-items-center" routerLink="/home"
+            >Home</a
+          >
+          <a class="home-about-color d-flex align-items-center" routerLink="/about"
+            >About</a
+          >
+
+          <form class="form-inline">
+            <input
+              class="form-control border-form mr-sm-2 d-flex justify-content-center"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button
+              class="btn border-form font-color my-2 my-sm-0"
+              type="submit"
+            >
+              Search
+            </button>
+          </form>
+        </div>
       </div>
 
       <!-- Menu de opções -->
@@ -88,8 +100,7 @@
 
 <!-- Segundo Menu -->
 <div class="row d-flex justify-content-center text-white background-color2">
-  <nav class="navbar navbar-expand-lg ">
-
+  <nav class="navbar navbar-expand-lg">
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active mr-5">
@@ -97,7 +108,7 @@
             >Playstation <span class="sr-only">(current)</span></a
           >
         </li>
-        <li class="nav-item active mr-5 ">
+        <li class="nav-item active mr-5">
           <a class="nav-link text-white" href="#"
             >Xbox <span class="sr-only">(current)</span></a
           >
@@ -107,7 +118,7 @@
             >Nitendo <span class="sr-only">(current)</span></a
           >
         </li>
-  
+
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
