--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,10 +20,10 @@
       <!-- Barra de pesquisa -->
       <div class="col-md-5">
         <div class="row d-flex justify-content-center">
-          <a class="home-about-color d-flex align-items-center" routerLink="/home"
+          <a class="home-about-color d-flex align-items-center mr-4" routerLink="/home"
             >Home</a
           >
-          <a class="home-about-color d-flex align-items-center" routerLink="/about"
+          <a class="home-about-color d-flex align-items-center mr-5" routerLink="/about"
             >About</a
           >
 
@@ -52,32 +52,32 @@
         >
           <ul class="row navbar-nav">
             <li class="row mr-5 nav-item active">
-              <i
-                class="fa fa-commenting-o d-flex align-items-center"
+              <h2 class="d-flex align-items-center mr-1"><i
+                class="fa fa-commenting-o "
                 aria-hidden="true"
-              ></i>
+              ></i></h2>
               <a class="nav-link text-white" href="#"
                 >Central de <br />
                 atendimento<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="row mr-5 nav-item">
-              <i
-                class="fa fa-user-o d-flex align-items-center"
+              <h2 class="d-flex align-items-center mr-1"><i
+                class="fa fa-user-o "
                 aria-hidden="true"
-              ></i>
+              ></i></h2>
               <a class="nav-link text-white" href="#"
                 >Entrar ou <br />
                 Cadastrar</a
               >
             </li>
             <li class="row nav-item dropdown">
-              <i
+              <h2 class="d-flex align-items-center mr-1"><i
                 class="fa fa-shopping-cart d-flex align-items-center"
                 aria-hidden="true"
-              ></i>
+              ></i></h2>
               <a
-                class="nav-link dropdown-toggle text-white text-center"
+                class="nav-link dropdown-toggle text-white text-align-center"
                 href="#"
                 role="button"
                 data-toggle="dropdown"
@@ -104,19 +104,28 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active mr-5">
+          <div class="row d-flex align-items-center">
+            <img src="../../assets/playstation.png" width="30px" height="30px" alt="">
           <a class="nav-link text-white" href="#"
             >Playstation <span class="sr-only">(current)</span></a
           >
+          </div>
         </li>
         <li class="nav-item active mr-5">
+         <div class="row d-flex align-items-center">
+          <img src="../../assets/xbox.png" width="30px" height="30px" alt="Logo Xbox">
           <a class="nav-link text-white" href="#"
             >Xbox <span class="sr-only">(current)</span></a
           >
+         </div>
         </li>
         <li class="nav-item active mr-5">
+         <div class="row d-flex align-items-center">
+          <img src="../../assets/nintendo.png" width="30px" height="30px" alt="Logo Nintendo">
           <a class="nav-link text-white" href="#"
-            >Nitendo <span class="sr-only">(current)</span></a
+            >Nintendo <span class="sr-only">(current)</span></a
           >
+         </div>
         </li>
 
         <li class="nav-item dropdown">
@@ -139,3 +148,4 @@
     </div>
   </nav>
 </div>
+
