fix: font-type: play

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<strong class="d-flex justify-content-center font-config titulo-destaque"
+<strong class="d-flex justify-content-center font-config titulo-destaque font-type"
   >Destaques</strong
 >
 
 <!-- Carousel -->
-<div class="row d-flex justify-content-center mt-3">
+<div class="row d-flex justify-content-center mt-3 font-type">
   <div
     id="carouselExampleControls"
     class="carousel slide w-50"
@@ -55,7 +55,7 @@
 <!-- Fim do Carousel -->
 
 <!-- Início NavBar Compras -->
-<div class="row d-flex justify-content-center">
+<div class="row d-flex justify-content-center font-type">
   <nav class="navbar navbar-dark bg-dark mt-5 w-50">
     <img src="../../assets/store.svg" alt="Icon Loja Física" />
     <a class="navbar-brand ml-1 mr-5" href="#"
@@ -73,13 +73,13 @@
 </div>
 <!-- Fim do navbar compras -->
 
-<div class="row ml-5 mt-5 d-flex align-items-center titulo-categoria">
+<div class="row ml-5 mt-5 d-flex align-items-center titulo-categoria font-type">
   <strong class="font-config mr-3">Ofertas</strong>
   <span class="font-cards mt-2">Confira nossas ofertas imperdíveis</span>
 </div>
 
 <!-- Início dos cards Ofertas -->
-<div class="container-fluid font-cards">
+<div class="container-fluid font-cards font-type">
   <div class="row-fluid">
     <div id="listagemProdutos" class="listagem ofertas-listagem">
       <div class="card-deck mr-4 ml-4 mt-5">
@@ -172,13 +172,13 @@
 </div>
 <!-- Fim dos cards de ofertas -->
 
-<div class="row ml-5 mt-5 d-flex align-items-center titulo-categoria">
+<div class="row ml-5 mt-5 d-flex align-items-center titulo-categoria font-type">
     <strong class="font-config mr-3">Lançamentos</strong>
     <span class="font-cards mt-2">Confira nossas ofertas imperdíveis</span>
   </div>
   
   <!-- Início dos cards Lançamentos -->
-  <div class="container-fluid font-cards">
+  <div class="container-fluid font-cards font-type">
     <div class="row-fluid">
       <div id="listagemProdutos" class="listagem ofertas-listagem">
         <div class="card-deck mr-4 ml-4 mt-5">
