--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row font-type">
   <div class="col-md-12 p-0">
     <nav class="navbar navbar-expand-lg text-white background-color">
       <!-- logomarca da CS   -->
@@ -99,7 +99,7 @@
 </div>
 
 <!-- Segundo Menu -->
-<div class="row d-flex justify-content-center text-white background-color2">
+<div class="row d-flex justify-content-center text-white background-color2 font-type">
   <nav class="navbar navbar-expand-lg">
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
