--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start text-muted" >
+<footer class="text-center text-lg-start text-muted font-type" >
 
     
     <div class="d-flex justify-content-center background-color mt-5">
