feat: Creating component playstation, xbox, nintendo and configurating routes

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -52,31 +52,31 @@
         >
           <ul class="row navbar-nav">
             <li class="row mr-5 nav-item active">
-              <h2 class="d-flex align-items-center mr-1"><i
+              <h3 class="d-flex align-items-center mr-1"><i
                 class="fa fa-commenting-o "
                 aria-hidden="true"
-              ></i></h2>
-              <a class="nav-link text-white" href="#"
+              ></i></h3>
+              <h6><a class="nav-link text-white" href="#"
                 >Central de <br />
                 atendimento<span class="sr-only">(current)</span></a
-              >
+              ></h6>
             </li>
             <li class="row mr-5 nav-item">
-              <h2 class="d-flex align-items-center mr-1"><i
+              <h3 class="d-flex align-items-center mr-1"><i
                 class="fa fa-user-o "
                 aria-hidden="true"
-              ></i></h2>
-              <a class="nav-link text-white" href="#"
+              ></i></h3>
+              <h6><a class="nav-link text-white" href="#"
                 >Entrar ou <br />
                 Cadastrar</a
-              >
+              ></h6>
             </li>
             <li class="row nav-item dropdown">
-              <h2 class="d-flex align-items-center mr-1"><i
+              <h3 class="d-flex align-items-center mr-1"><i
                 class="fa fa-shopping-cart d-flex align-items-center"
                 aria-hidden="true"
-              ></i></h2>
-              <a
+              ></i></h3>
+              <h6><a
                 class="nav-link dropdown-toggle text-white text-align-center"
                 href="#"
                 role="button"
@@ -84,7 +84,7 @@
                 aria-expanded="false"
                 >Meu <br />
                 carrinho
-              </a>
+              </a></h6>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
@@ -106,7 +106,7 @@
         <li class="nav-item active mr-5">
           <div class="row d-flex align-items-center">
             <img src="../../assets/playstation.png" width="30px" height="30px" alt="">
-          <a class="nav-link text-white" href="#"
+          <a class="nav-link text-white" routerLink="/playstation"
             >Playstation <span class="sr-only">(current)</span></a
           >
           </div>
@@ -114,7 +114,7 @@
         <li class="nav-item active mr-5">
          <div class="row d-flex align-items-center">
           <img src="../../assets/xbox.png" width="30px" height="30px" alt="Logo Xbox">
-          <a class="nav-link text-white" href="#"
+          <a class="nav-link text-white" routerLink="/xbox"
             >Xbox <span class="sr-only">(current)</span></a
           >
          </div>
@@ -122,7 +122,7 @@
         <li class="nav-item active mr-5">
          <div class="row d-flex align-items-center">
           <img src="../../assets/nintendo.png" width="30px" height="30px" alt="Logo Nintendo">
-          <a class="nav-link text-white" href="#"
+          <a class="nav-link text-white" routerLink="/nintendo"
             >Nintendo <span class="sr-only">(current)</span></a
           >
          </div>
