fix: decreasing font and icons navbar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,19 +57,25 @@
 
 <!-- Início NavBar Compras -->
 <div class="row d-flex justify-content-center font-type">
-  <nav class="navbar navbar-dark bg-dark mt-5 w-50">
-    <img src="../../assets/store.svg" alt="Icon Loja Física" />
-    <a class="navbar-brand ml-1 mr-5" href="#"
-      >Compre na<br />
+  <nav class="navbar-form mt-5 w-50 d-flex justify-content-center align-items-center ">
+    <div class="mr-2 ml-5 mt-1 mb-1 d-flex justify-content-center align-items-center">
+      <img src="../../assets/store.svg" width="30px" height="30px" alt="Icone Loja Física" />
+    <a class="navbar-brand ml-1 mr-5 text-navbar" href="#"
+      >Compre na
       loja física</a
     >
-    <img src="../../assets/shoppingcar.svg" alt="" />
-    <a class="navbar-brand ml-1 mr-5" href="#">Compre <br />pelo site</a>
-    <img src="../../assets/service.svg" alt="" />
-    <a class="navbar-brand ml-1 mr-5" href="#"
-      >Atendimento <br />
+    </div>
+    <div class="mr-2 ml-2 mt-1 mb-1 d-flex justify-content-center align-items-center">
+      <img src="../../assets/shoppingcar.svg" width="30px" height="30px" alt="Icone de carrinho de compras" />
+    <a class="navbar-brand ml-1 mr-5 text-navbar" href="#">Compre pelo site</a>
+    </div>
+    <div class="ml-2 mt-1 mb-1 d-flex justify-content-center align-items-center">
+      <img src="../../assets/service.svg" width="30px" height="30px" alt="icone de atendimento especial" />
+    <a class="navbar-brand ml-1 mr-5 text-navbar" href="#"
+      >Atendimento
       especializado</a
     >
+    </div>
   </nav>
 </div>
 <!-- Fim do navbar compras -->
