--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,7 +21,13 @@ margin-top: 30px !important;
 
 /* navbar */
 .navbar-form{
-    border: 1px var(--color-yellow);  
+    border: 1px solid var(--color-gray);  
+    border-radius: 10px;
+    background-color: var(--color-gray);
+}
+.text-navbar{
+    color: var(--color-white);
+    font-size: 80%;
 }
 
 
@@ -49,12 +55,16 @@ margin-top: 30px !important;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
   }
   .card-title{
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 5px;
     font-size: 90%;
+    display: flex;
+    justify-content: center;
 
   }
   .row-fluid{
