--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,29 +7,29 @@
 <div class="row d-flex justify-content-center mt-3 font-type">
   <div
     id="carouselExampleControls"
-    class="carousel slide w-50"
+    class="carousel slide w-50 edit-carousel"
     data-ride="carousel"
   >
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
           src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S1_2560x1440-5d74d9b240bba8f2c40920dcde7c5c67_2560x1440-5d74d9b240bba8f2c40920dcde7c5c67"
-          class="d-block w-100"
+          class="d-block w-100 image-carousel"
           alt="Capa do jogo God of War"
         />
       </div>
       <div class="carousel-item">
         <img
           src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_auto/ncom/pt_BR/games/switch/t/the-legend-of-zelda-breath-of-the-wild-switch/hero"
-          class="d-block w-100"
-          alt="..."
+          class="d-block w-100 image-carousel"
+          alt="Capa do jogo Zelda"
         />
       </div>
       <div class="carousel-item">
         <img
           src="https://sm.ign.com/t/ign_br/blogroll/w/we-played-/we-played-the-witcher-3-wild-hunt-for-6-hours-ign_jtu3.h720.jpg"
-          class="d-block w-100"
-          alt="..."
+          class="d-block w-100 image-carousel"
+          alt="Capa do jogo The Witcher 3"
         />
       </div>
     </div>
