--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -111,7 +111,7 @@
           >
           </div>
         </li>
-        <li class="nav-item active mr-5">
+        <li class="nav-item active mr-5 ml-5">
          <div class="row d-flex align-items-center">
           <img src="../../assets/xbox.png" width="30px" height="30px" alt="Logo Xbox">
           <a class="nav-link text-white" routerLink="/xbox"
