--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="row font-type">
   <div class="col-md-12 p-0">
-    <nav class="navbar navbar-expand-lg text-white background-color">
+    <nav class="navbar navbar-expand-lg background-color">
       <!-- logomarca da CS   -->
       <div class="col-md-3 d-flex justify-content-end">
         <img class="mr-3" src="../../assets/logocs.png" alt="Logo CS Games" />
@@ -20,7 +20,7 @@
       <!-- Barra de pesquisa -->
       <div class="col-md-5">
         <div class="row d-flex justify-content-center">
-          <a class="home-about-color d-flex align-items-center mr-4" routerLink="/home"
+          <a class="home-about-color d-flex align-items-center mr-5" routerLink="/home"
             >Home</a
           >
           <a class="home-about-color d-flex align-items-center mr-5" routerLink="/about"
@@ -35,7 +35,7 @@
               aria-label="Search"
             />
             <button
-              class="btn border-form font-color my-2 my-sm-0"
+              class="btn border-form search-color my-2 my-sm-0"
               type="submit"
             >
               Search
@@ -50,13 +50,13 @@
           class="collapse navbar-collapse text-white"
           id="navbarSupportedContent"
         >
-          <ul class="row navbar-nav">
-            <li class="row mr-5 nav-item active">
+          <ul class="row navbar-nav mt-2 ml-3">
+            <li class="row mr-5 nav-item active ">
               <h3 class="d-flex align-items-center mr-1"><i
                 class="fa fa-commenting-o "
                 aria-hidden="true"
               ></i></h3>
-              <h6><a class="nav-link text-white" href="#"
+              <h6><a class="nav-link text-navbar1" href="#"
                 >Central de <br />
                 atendimento<span class="sr-only">(current)</span></a
               ></h6>
@@ -66,7 +66,7 @@
                 class="fa fa-user-o "
                 aria-hidden="true"
               ></i></h3>
-              <h6><a class="nav-link text-white" href="#"
+              <h6><a class="nav-link text-navbar1" href="#"
                 >Entrar ou <br />
                 Cadastrar</a
               ></h6>
@@ -77,7 +77,7 @@
                 aria-hidden="true"
               ></i></h3>
               <h6><a
-                class="nav-link dropdown-toggle text-white text-align-center"
+                class="nav-link dropdown-toggle text-navbar1 text-align-center"
                 href="#"
                 role="button"
                 data-toggle="dropdown"
@@ -104,7 +104,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active mr-5">
-          <div class="row d-flex align-items-center">
+          <div class="row d-flex align-items-center mr-5">
             <img src="../../assets/playstation.png" width="30px" height="30px" alt="">
           <a class="nav-link text-white" routerLink="/playstation"
             >Playstation <span class="sr-only">(current)</span></a
@@ -112,7 +112,7 @@
           </div>
         </li>
         <li class="nav-item active mr-5 ml-5">
-         <div class="row d-flex align-items-center">
+         <div class="row d-flex align-items-center mr-5 ml-1">
           <img src="../../assets/xbox.png" width="30px" height="30px" alt="Logo Xbox">
           <a class="nav-link text-white" routerLink="/xbox"
             >Xbox <span class="sr-only">(current)</span></a
@@ -120,7 +120,7 @@
          </div>
         </li>
         <li class="nav-item active mr-5">
-         <div class="row d-flex align-items-center">
+         <div class="row d-flex align-items-center ml-5 mr-5 ">
           <img src="../../assets/nintendo.png" width="30px" height="30px" alt="Logo Nintendo">
           <a class="nav-link text-white" routerLink="/nintendo"
             >Nintendo <span class="sr-only">(current)</span></a
