feat: creating layout of the component plastation

--- a/src/app/playstation/playstation.component.html
+++ b/src/app/playstation/playstation.component.html
@@ -1,1 +1,60 @@
-<p>playstation works!</p>
+<div class="container-fluid font-type">
+  <div class="d-flex justify-content-end">
+    <div class="col-md-2 mt-3">
+      <div class="row">
+        <nav id="navbar-example3" class="navbar navbar-light bg-light">
+          <nav class="nav nav-pills flex-column">
+            <a class="nav-link" href="#item-1">PlayStation</a>
+            <nav class="nav nav-pills flex-column">
+              <a class="nav-link ml-3 my-1" href="#item-1-1">Ação</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-2">Aventura</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-3">Corrida</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-4">Esporte</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-5">Estratégia</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-6">Luta</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-7">Música</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-8">Simulação</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-9">Terror</a>
+              <a class="nav-link ml-3 my-1" href="#item-1-10">Tiro</a>
+            </nav>
+          </nav>
+        </nav>
+      </div>
+    </div>
+
+    <div class="col-md-10 mt-3 column-edit">
+      <div
+        data-spy="scroll"
+        data-target="#navbar-example3"
+        data-offset="0"
+        class="mr-0"
+      >
+       
+       <ul class="mr-0">
+        <h4 id="item-1">PlayStation</h4>
+        <p>...</p>
+        <h5 id="item-1-1">Ação</h5>
+        <p>...</p>
+        <h5 id="item-1-2">Aventura</h5>
+        <p>...</p>
+        <h5 id="item-1-3">Corrida</h5>
+        <p>...</p>
+        <h5 id="item-1-4">Esporte</h5>
+        <p>...</p>
+        <h5 id="item-1-5">Estratégia</h5>
+        <p>...</p>
+        <h5 id="item-1-6">Luta</h5>
+        <p>...</p>
+        <h5 id="item-1-7">Música</h5>
+        <p>...</p>
+        <h5 id="item-1-8">Simulação</h5>
+        <p>...</p>
+        <h5 id="item-1-9">Terror</h5>
+        <p>...</p>
+        <h5 id="item-1-10">Tiro</h5>
+        <p>...</p>
+       </ul>
+      </div>
+    </div>
+  </div>
+</div>
