feat: cards on playstation-homepage

--- a/src/app/playstation/playstation.component.html
+++ b/src/app/playstation/playstation.component.html
@@ -34,7 +34,18 @@
         <h4 id="item-1">PlayStation</h4>
         <p>...</p>
         <h5 id="item-1-1">Ação</h5>
-        <p>...</p>
+        <div class="card">
+            <img
+              src="https://image.api.playstation.com/vulcan/ap/rnd/202010/0221/vC7trMorHJgbImp8PCQvpI0p.png"
+              class="card-img-top mt-2 size-image"
+              width="50"
+              alt="Capa do jogo Horizon Zero Dawn"
+            />
+            <h6 class="card-title"><strong>Horizon Zero Dawn</strong></h6>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit.
+            </p>
+          </div>
         <h5 id="item-1-2">Aventura</h5>
         <p>...</p>
         <h5 id="item-1-3">Corrida</h5>
